<?xml version="1.0"?>
<package format="2">
  <name>boost_date_time_msgs</name>
  <version>0.0.0</version>
  <description>Provides ROS messages for ptime and time_duration.</description>
  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>

  <license>LGPL / BSD</license>

  <author email="luca@intermodalics.eu">Luca Magnabosco</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <test_depend>roscpp_serialization</test_depend>
  <test_depend>roscpp_traits</test_depend>

</package>
